[package]
name = "dtrace_rust"
version = "0.1.0"
authors = ["gcj21@cl.cam.ac.uk"]
links = "dtrace"
build = "build.rs"

[dependencies]
kafka = "0.3.2"
zookeeper = { git = "https://github.com/bonifaido/rust-zookeeper" }
libc = "0.2.0"
log = "0.3.6"
time = "0.1.35" 
rustc-serialize = "0.3.0"
docopt = "0.6.80"
errno = "0.1.7"
log4rs = { features = ["toml"] }
chan = "0.1.18"
chan-signal = "0.1.6"
libloading = "0.3"
toml = "0.2.1"
